<resources>
    <string name="app_name">半妖倒数日</string>
    <string name="home_page">主页</string>
    <string name="life">人生</string>
    <string name="history">历史</string>
    <string name="settings">设置</string>
    <string name="today">今日</string>
    <string name="week">本周</string>
    <string name="month">本月</string>
    <string name="year">本年</string>
    <string name="week_beginning_day">周起始日</string>
    <string name="week_beginning_day_summary">选择周六或者周日作为周起始日</string>
    <string name="monday">周一</string>
    <string name="sunday">周日</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="myself_life_tips">生命进度条</string>
    <string name="myself_life_tips_summary">展示生命进度条</string>
    <string name="change_theme">主题</string>
    <string name="change_theme_summary">主题相关设置</string>
    <string name="pref_category_appearance">外观</string>
    <string name="label_theme_picker">主题选择器</string>
    <string name="pref_accent_color_summary">用于次一级颜色</string>
    <string name="pref_accent_color_title">次要颜色</string>
    <string name="pref_background_color_summary">填充背景的颜色</string>
    <string name="pref_background_color_title">背景颜色</string>
    <string name="pref_colored_navigation_bar_summary">添加主颜色到导航栏</string>
    <string name="pref_colored_navigation_bar_title">导航栏颜色</string>
    <string name="pref_primary_color_summary">用于主要颜色</string>
    <string name="pref_primary_color_title">主要颜色</string>
    <string name="pref_theme_summary">选择一个预设主题</string>
    <string name="pref_theme_title">主题</string>
    <string name="vibrate_setting">振动反馈</string>
    <string name="birth_year">出生年</string>
    <string name="predict_alive_year">预期生命</string>
    <string name="default_year">2000</string>
    <string name="default_life">100</string>
    <string name="to_set_up">待设置</string>
    <string name="tips_life_progress">输入完整之后开关可用</string>
    <string name="tips_life_progress_enable">开关可用</string>
    <string name="tips_input_error_year">请输入本年之前时间</string>
    <string name="create_memorial_day">创建纪念日</string>
    <string name="create_count_down_day">创建倒数日</string>
    <string name="just_display_today">历史上的今天</string>
    <string name="about">关于</string>
    <string name="open_today">历史上的今天</string>
    <string name="title_close_open_today">注意</string>
    <string name="summary_close_open_today">是否重启应用使设置生效？</string>
    <string name="title_default">默认标题</string>
    <string name="content_default">默认备注</string>
    <string name="date">日期</string>
    <string name="time_unit">时间单位</string>
    <string name="time_unit_1">小时</string>
    <string name="time_unit_2">天</string>
    <string name="time_unit_3">周</string>
    <string name="time_unit_4">月</string>
    <string name="open_clock">开启提醒</string>
    <string name="background_color">背景颜色</string>
    <string name="label">标签</string>
    <string name="display">通知栏显示</string>
    <string name="default_text">默认</string>
    <string name="save_success">保存成功</string>
    <string name="warning_title">标题不允许为空</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="tip_calendar_permission">当前没有日历权限,提醒功能失效</string>
</resources>