<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/item_margin"
        android:paddingEnd="@dimen/item_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin"
            android:layout_marginBottom="@dimen/item_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <app.futured.donut.DonutProgressView
                android:id="@+id/life_donut"
                android:layout_width="@dimen/donut_size"
                android:layout_height="@dimen/donut_size"
                app:donut_bgLineColor="@color/circle_progress_color"
                app:donut_gapAngle="270"
                app:donut_gapWidth="0"
                app:donut_strokeWidth="16dp" />

            <include
                android:id="@+id/life"
                layout="@layout/item_life" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_life_myself"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/myself_life_tips_summary" />

            <com.bitvale.switcher.SwitcherX
                android:id="@+id/switch_life_myself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="false"
                android:saveEnabled="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/birth_year" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/birth_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:digits="1234567890"
                android:hint="@string/default_year"
                android:maxLength="4" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_life_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:text="@string/predict_alive_year" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/predict_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:digits="1234567890"
                android:hint="@string/default_life"
                android:maxLength="3" />
        </RelativeLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>